doc: started working on Lab 3 - starting to work on lambda functions

--- a/labs/lab3-non-kinesis-example/cloudformation/2000_lambda_functions.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/2000_lambda_functions.yaml
@@ -66,12 +66,7 @@ Resources:
             - "dynamodb:Query"
             Resource:
             - "arn:${AWS::Partition}:dynamodb:*:${AWS::AccountId}:table/*/index/*"
-            - Fn::Sub 
-              - "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${TableName}"
-              - TableName: Fn::ImportValue:
-                  Fn::Sub: 
-                  - "${DynamoDbStackName}-AccessCardAppTableName"
-                  - DynamoDbStackName: !ImportValue "Lab3DynamoDbStackName"
+            - !Sub "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/access-card-app"
       RoleName: ListEmployeeIdsLambdaFunctionRole
 
   ListEmployeeIdsLambdaFunctionLogGroup:
