doc: started working on Lab 3 - starting to work on lambda functions

--- a/labs/lab3-non-kinesis-example/cloudformation/2000_lambda_functions.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/2000_lambda_functions.yaml
@@ -65,7 +65,7 @@ Resources:
             - "dynamodb:Scan"
             - "dynamodb:Query"
             Resource:
-            - "arn:${AWS::Partition}:dynamodb:*:${AWS::AccountId}:table/*/index/*"
+            - !Sub "arn:${AWS::Partition}:dynamodb:*:${AWS::AccountId}:table/*/index/*"
             - !Sub "arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/access-card-app"
       RoleName: ListEmployeeIdsLambdaFunctionRole
 
