doc: started working on Lab 3 - starting to work on lambda functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "getenv",
         "hashlib",
         "hexdigest",
+        "Hostnames",
         "kconvert",
         "nosql",
         "OLDPWD",
