doc: started working on Lab 3 - starting to work on lambda functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "hexdigest",
         "Hostnames",
         "kconvert",
+        "KEYPAIR",
         "nosql",
         "OLDPWD",
         "onboarded",
