doc: started working on Lab 3 - starting to work on lambda functions

--- a/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
@@ -200,6 +200,13 @@ Resources:
       - Key: "Public"
         Value: "TRUE"
 
+  PublicVpcInternetGatewayRouteTableAssociation:
+    Type: AWS::EC2::GatewayRouteTableAssociation
+    Properties: 
+      GatewayId: !Ref PublicVpcInternetGateway
+      RouteTableId: !Ref PublicVpcRouteTable
+
+
 #######################################################################################################################
 ###                                                                                                                 ###
 ###                                                     ROUTING                                                     ###
