doc: started working on Lab 3 - starting to work on lambda functions

--- a/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
@@ -234,6 +234,7 @@ Resources:
     Type: AWS::EC2::Route
     DependsOn:
     - PublicVpc
+    - PublicVpcInternetGatewayRouteTableAssociation
     Properties:
       DestinationCidrBlock: "0.0.0.0/0"
       RouteTableId: !Ref PublicVpcRouteTable
