--- a/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
@@ -139,6 +139,20 @@ Resources:
         - Key: "Public"
           Value: "TRUE"
 
+  PublicVpcInternetGateway:
+    Type: AWS::EC2::InternetGateway
+    DependsOn: PublicVpc
+    Properties:
+      Tags:
+      - Key: "Public"
+        Value: "TRUE"
+
+  PublicVpcInternetGatewayAttachment:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties: 
+      InternetGatewayId: !Ref PublicVpcInternetGateway
+      VpcId: !Ref PublicVpc
+
   PublicVpcSubnet1:
     Type: AWS::EC2::Subnet
     Properties: 
@@ -163,35 +177,13 @@ Resources:
       VpcId: !Ref PublicVpc
       MapPublicIpOnLaunch: true
 
-  PublicVpcInternetGateway:
-    Type: AWS::EC2::InternetGateway
-    DependsOn: PublicVpc
-    Properties:
-      Tags:
-      - Key: "Public"
-        Value: "TRUE"
-
-  TrustedInternetHostsPrefixList:
-    Type: AWS::EC2::PrefixList
-    Properties: 
-      AddressFamily: "IPv4"
-      Entries: 
-        - Cidr: !Ref FirstTrustedInternetCiderParam
-          Description: "A IP address or network from the Internet we trust"
-      MaxEntries: 10
-      PrefixListName: "TrustedInternetHostsPrefixList"
-
   PublicVpcRouteTable:
     Type: AWS::EC2::RouteTable
+    DependsOn:
+    - PublicVpcInternetGatewayAttachment
     Properties: 
       VpcId: !Ref PublicVpc
-
-  PublicVpcInternetGatewayAttachment:
-    Type: AWS::EC2::VPCGatewayAttachment
-    Properties: 
-      InternetGatewayId: !Ref PublicVpcInternetGateway
-      VpcId: !Ref PublicVpc
-
+  
   PublicVpcSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     DependsOn:
@@ -277,6 +269,16 @@ Resources:
 ###                                                                                                                 ###
 #######################################################################################################################
 
+  TrustedInternetHostsPrefixList:
+    Type: AWS::EC2::PrefixList
+    Properties: 
+      AddressFamily: "IPv4"
+      Entries: 
+        - Cidr: !Ref FirstTrustedInternetCiderParam
+          Description: "A IP address or network from the Internet we trust"
+      MaxEntries: 10
+      PrefixListName: "TrustedInternetHostsPrefixList"
+
   InterVpcHostsPrefixList:
     Type: AWS::EC2::PrefixList
     Properties: 
@@ -287,7 +289,7 @@ Resources:
         - Cidr: !Ref PrivateVpcCidrParam
           Description: "Private VPC CIDR"
       MaxEntries: 3
-      PrefixListName: "TrustedInternetHostsPrefixList"
+      PrefixListName: "InterVpcHostsPrefixList"
 
   ProxyServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -303,17 +305,17 @@ Resources:
   ProxyServerSshIngress:
     Type: AWS::EC2::SecurityGroupIngress
     Properties: 
-      Description: Allow port 22/tcp (SSH)
+      Description: "Allow port 22/tcp (SSH)"
       FromPort: 22
       ToPort: 22
       GroupId: !Ref ProxyServerSecurityGroup
       IpProtocol: tcp
-      CidrIp: !Ref FirstTrustedInternetCiderParam
+      SourcePrefixListId: !Ref TrustedInternetHostsPrefixList
 
   ProxyServerProxyIngress:
     Type: AWS::EC2::SecurityGroupIngress
     Properties: 
-      Description: Allow port 22/tcp (SSH)
+      Description: "Allow port 3128/tcp (HTTP_PROXY)"
       FromPort: 3128
       ToPort: 3128
       GroupId: !Ref ProxyServerSecurityGroup
