doc: started working on Lab 3 - starting to work on lambda functions

--- a/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
@@ -401,7 +401,7 @@ Resources:
       DesiredCapacity: "1"
       LaunchTemplate: 
         LaunchTemplateId: !Ref ProxyServerInstanceHostLaunchTemplate
-        Version: "$Latest"
+        Version: !GetAtt ProxyServerInstanceHostLaunchTemplate.LatestVersionNumber
       MaxSize: "1"
       MinSize: "1"
       NewInstancesProtectedFromScaleIn: false
