doc: started working on Lab 3 - Adding cloudformation template for file systems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,12 +19,14 @@
         "nosql",
         "OLDPWD",
         "onboarded",
+        "OPENZFS",
         "prepopulate",
         "Redrive",
         "RFID",
         "Tierings",
         "traceback",
         "zcat",
-        "zfill"
+        "zfill",
+        "ZSTD"
     ]
 }
