doc: started working on Lab 3 - Adding cloudformation template for file systems

--- a/labs/lab3-non-kinesis-example/cloudformation/3100_fsx_filesystem.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3100_fsx_filesystem.yaml
@@ -114,16 +114,19 @@ Resources:
           - ClientConfigurations: 
             - Clients: 
                 Fn::ImportValue: !Sub "${VpcStackName}-PrivateVpcCidrBlock"
+              Options: 
+                - rw
+                - crossmnt
+                - sync
           ReadOnly: false
           RecordSizeKiB: 16
+        ThroughputCapacity: 64
         WeeklyMaintenanceStartTime: "7:03:00"
       SecurityGroupIds: 
       - !Ref StaticWebRootFsxFilesystemSecurityGroup
       StorageCapacity: 64
       SubnetIds: 
       - Fn::ImportValue: !Sub "${VpcStackName}-PrivateVpcSubnet1"
-      - Fn::ImportValue: !Sub "${VpcStackName}-PrivateVpcSubnet2"
-      - Fn::ImportValue: !Sub "${VpcStackName}-PrivateVpcSubnet3"
       Tags: 
       - Key: "ContainsPersonalInformation"
         Value: "FALSE"
